kubernetes/core/keycloak/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: keycloak
  labels:
    security: restricted
    istio.io/dataplane-mode: ambient
