kubernetes/core/keycloak/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak-core
  namespace: keycloak
  labels:
    app: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
      - name: keycloak
        image: quay.io/keycloak/keycloak:26.2.4
        args:
        - start
        - --http-port=8080
        - --http-enabled=true
        - --https-port=8443
        - --https-certificate-file=/etc/x509/https/tls.crt
        - --https-certificate-key-file=/etc/x509/https/tls.key
        - --db-url-host=$(DB_HOST)
        - --hostname-strict=false
        volumeMounts:
        - name: tls-certs
          mountPath: /etc/x509/https
          readOnly: true
        ports:
        - name: http
          containerPort: 8080
        - name: https
          containerPort: 8443
        readinessProbe:
          httpGet:
            path: /admin/master/console/
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 10
        resources:
          requests:
            cpu: "100m"
            memory: "1Gi"
          limits:
            cpu: "2000m"
            memory: "4Gi"
      volumes:
      - name: tls-certs
        secret:
          secretName: keycloak-core-internal-tls
