kubernetes/core/keycloak/external-dns.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak-extname
  annotations:
    external-dns.alpha.kubernetes.io/hostname: keycloak.cloud.danmanners.com
    external-dns.alpha.kubernetes.io/ttl: "300"
spec:
  type: ExternalName
  externalName: unifi-home.homelab.danmanners.com
  selector:
    app: keycloak
  sessionAffinity: None
