kubernetes/core/keycloak/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak-core
  namespace: keycloak
  labels:
    app: keycloak
spec:
  ports:
  - name: http
    port: 80
    targetPort: 8080
    protocol: TCP
  - name: https
    port: 443
    targetPort: 8443
    protocol: TCP
  selector:
    app: keycloak
  type: LoadBalancer
