kubernetes/core/keycloak/ingress.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: core-services
  namespace: keycloak
spec:
  gatewayClassName: istio
  listeners:
  - name: https
    port: 443
    protocol: HTTPS
    tls:
      mode: Terminate
      certificateRefs:
      - name: keycloak-tls-cert
        kind: Secret
        group: ""
    allowedRoutes:
      namespaces:
        from: All
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: keycloak
  namespace: keycloak
  annotations:
    external-dns.alpha.kubernetes.io/hostname: keycloak.capi-core.homelab.danmanners.com
spec:
  parentRefs:
  - name: core-services
    namespace: keycloak
  hostnames:
  - keycloak.capi-core.homelab.danmanners.com
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: keycloak-core
      kind: Service
      group: ""
      port: 80
      # TCP/443 isn't working yet, don't know if it's a
      # Gateway API issue or something I'm doing wrong.
      # E2E Encryption is the goal, but for now...
      # ¯\_(ツ)_/¯
